syntax = "proto3";
import "common/transaction.proto";
import "common/balance.proto";
import "common/account.proto";
import "common/transfer.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "AccountsMicroservice";

package AccountsMicroservice;

service Accounts {
  rpc Get (GetAccountsRequest) returns (GetAccountsResponse);
  rpc GetUserAccounts (GetUserAccountsRequest) returns (GetAccountsResponse);
  rpc GetBalances (GetBalancesRequest) returns (GetBalancesResponse);
  rpc GetTransactions (GetTransactionsRequest) returns (GetTransactionsResponse);
  rpc Transfer (TransferRequest) returns (TransferResponse);
  rpc BatchTransfer (BatchTransferRequest) returns (google.protobuf.Empty);
  rpc Setup(SetupRequest) returns (google.protobuf.Empty);
  rpc SetupAppend(SetupRequest) returns (google.protobuf.Empty);
}

message GetAccountsRequest {
  repeated string ids = 1;
}

message GetUserAccountsRequest {
  string userId = 1;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

message GetBalancesRequest {
  repeated string ids = 1;
}

message GetBalancesResponse {
  repeated AccountBalance balances = 1;
}

message GetTransactionsRequest {
  repeated string ids = 1;
  google.protobuf.Timestamp timestampFrom = 2;
  google.protobuf.Timestamp timestampTo = 3;
}

message GetTransactionsResponse {
  repeated Transaction transactions = 1;
}

message TransferRequest {
  Transfer transfer = 1;
}

message TransferResponse {
  Transaction transaction = 1;
}

message BatchTransferRequest {
  repeated Transfer transfers = 1;
}

message SetupRequest {
  repeated Account accounts = 1;
}