syntax = "proto3";
import "common/transaction.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "TransactionsMicroservice";
package TransactionsMicroservice;

service Transactions {
  rpc Get (GetTransactionsRequest) returns (GetTransactionsResult);
  rpc Filter(FilterTransactionsRequest) returns (GetTransactionsResult);
  rpc Create (CreateTransactionRequest) returns (CreateTransactionResult);
  rpc BatchCreate (BatchCreateTransactionRequest) returns (BatchCreateTransactionResult);
  rpc Setup(SetupRequest) returns (google.protobuf.Empty);
  rpc SetupAppend(SetupRequest) returns (google.protobuf.Empty);
}

message GetTransactionsRequest {
  repeated string ids = 1;
}

message FilterTransactionsRequest {
  repeated string recipients = 1;
  repeated string senders = 2;
  repeated string payments = 3;
  repeated string cards = 4;
  google.protobuf.Timestamp timestampFrom = 5;
  google.protobuf.Timestamp timestampTo = 6;
  int32 top = 8;
}

message GetTransactionsResult {
  repeated Transaction transactions = 1;
}

message CreateTransactionRequest {
  string title = 1;
  float amount = 2;
  string recipient = 3;
  string sender = 4;
  string paymentId = 5;
  string cardId = 6;
}

message CreateTransactionResult {
  Transaction transaction = 1;
}

message BatchCreateTransactionRequest {
  repeated CreateTransactionRequest requests = 2;
}

message BatchCreateTransactionResult {
  repeated Transaction transactions = 1;
}

message SetupRequest {
  repeated Transaction transactions = 1;
}